# evolution-sim

./: Cargo.toml  LICENSE  README.md
npm/: LICENSE  index.html  index.js  package-lock.json  package.json
src/: cell.rs  config.rs  creature.rs  lib.rs  manager.rs
