[package]
name = "evolution-sim"
authors = ["Tony Christopher <tony@tjcdeveloper.co.uk>"]
version = "0.1.0"
edition = "2021"
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.60"
features = [
    'CanvasRenderingContext2d',
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlCanvasElement',
    'Node',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"